# grin-pipeline

./: .gitignore  .pdm-python  CLAUDE.md  README.md  README.org  components.py  config-template.yml  config.yml.secure  dotenv  orchestrator.py  pyproject.toml  token_log_viewer.py
doc/: overview.org  snippets.org
src/: prime_batch.py
src/clients/: __init__.py  auth_util.py  create_creds.py  google_auth.py  grin_client.py  object_store.py
src/pipeline/: book_ledger.py  book_pile.py  config_loader.py  logging_config.py  manager.py  orchestrator.py  plumbing.py  secretary.py  stager.py  synchronizer.py  token_bag.py  token_bag_manager.py  token_log_viewer.py
src/pipeline/filters/: cleaner.py  decryptor.py  downloader.py  monitors.py  mover.py  primer.py  requester.py  uploader.py
src/reporters/: ledger_reporter.py  reporter.py
src/utils/: ledger_generator.py  sync_with_aws.py
tests/: test_book_ledger.py  test_book_pile.py  test_decryptor.py  test_filter.py  test_grinclient.py  test_ledger_and_bag.py  test_manager.py  test_monitor.py  test_mover.py  test_pile_and_bag.py  test_pipe.py  test_pipeline.py  test_primer.py  test_reporter.py  test_requester.py  test_secretary.py  test_stager.py  test_token.py  test_token_bag.py  test_token_bag_manager.py  test_uploader.py
tests/data/: test_config.yaml  test_ledger.csv
tests/data/tokens/: 234.json  345.json
tests/unit/: test_auth_util.py  test_grin_client_http.py
