[project]
name = "Grin_Siphon"
version = "0.1.0"
description = "A modular asynchronous pipeline for processing files from GRIN"
authors = [
    {name = "Cliff Wulfman", email = "cwulfman@princeton.edu"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "pyyaml>=6.0.2",
    "google-api-python-client>=2.183.0",
    "oauth2client>=4.1.3",
    "httpx>=0.28.1",
    "boto3>=1.39.11",
    "google-auth-oauthlib>=1.2.2",
    "dotenv>=0.9.9",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python-version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pdm]
package-dir = "src"

[tool.pdm.scripts]
orchestrator = "python src/pipeline/orchestrator.py"
viewer = "python src/pipeline/token_log_viewer.py"
lint="ruff check"
test = "pytest"

[lint]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest-datadir>=1.8.0",
    "mypy>=1.17.0",
    "isort>=6.0.1",
    "ruff>=0.13.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.30.1",
]
